...
     Setup the cell's buttons and their target methods. Each button's target methods should have been set by TodayViewController by closure
     */
    private func setupButtons() {
        
        // Edit button
        editButton = UIButton(type: UIButton.ButtonType.system)
        editButton.setTitle("Edit", for: UIControl.State.normal)
        editButton.setTitleColor(UIColor.black, for: UIControl.State.normal)
        editButton.addTarget(self, action: #selector(editButtonPressed), for: UIControl.Event.touchUpInside)
        
        self.contentView.addSubview(editButton)
        editButton.translatesAutoresizingMaskIntoConstraints = false
        editButton.topAnchor.constraint(equalTo: self.contentView.layoutMarginsGuide.topAnchor).isActive = true
        editButton.rightAnchor.constraint(equalTo: self.contentView.layoutMarginsGuide.rightAnchor).isActive = true
        
        // Set button
        setButton = UIButton(type: UIButton.ButtonType.system)
        setButton.setTitle("Set", for: UIControl.State.normal)
        setButton.setTitleColor(UIColor.black, for: UIControl.State.normal)
        setButton.addTarget(self, action: #selector(setButtonPressed), for: UIControl.Event.touchUpInside)
        
        self.contentView.addSubview(setButton)
        setButton.translatesAutoresizingMaskIntoConstraints = false
        setButton.topAnchor.constraint(equalTo: self.contentView.layoutMarginsGuide.topAnchor).isActive = true
...
